--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       </div>
 	    
      <div class="text-center">
-        <a class="btn btn-black btn-xl js-scroll-trigger" href="https://github.com/pukerian5/wgtik">
+        <a class="btn btn-black btn-xl js-scroll-trigger" href="https://github.com/pukerian5/WGTIK_2021">
         My Projects</a>
      </div>
    </div>
@@ -188,7 +188,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading" id="githubb">
-            <a class="text-white-link" href="https://github.com/pukerian5/wgtik">
+            <a class="text-white-link" href="https://github.com/pukerian5/WGTIK_2021">
 						  [Link to GitHub Repository]
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
